--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # DJANGO_SETTINGS_MODULE=nol_backend.settings.prod
 # True - Develop, False - Production
 
-DEBUG=True
+DEBUG=False
 DJANGO_AUTO_MIGRATE=1
 
 DJANGO_SECRET_KEY=django-insecure-m8cund7g7=81$ub0yi=e32^#l6r$yjk@qf7@_4)*h7a5r#mu)8
