--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,71 @@
+#  Python cache files
 __pycache__/
 *.py[cod]
-.env.example
+*$py.class
+
+#  Virtual environment
 venv/
+env/
+.venv/
+ENV/
+env.bak/
+venv.bak/
+
+#  Packaging
+*.egg
+*.egg-info/
+dist/
+build/
+.eggs/
+
+#  Django static and media files
+/staticfiles/
+/media/
+
+#  Django secret files / local configs
+.env
+*.env
+
+# IDE & Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*.bak
+*.tmp
+
+#  Logs & system files
+*.log
+*.pot
+*.pyc
+.DS_Store
+Thumbs.db
+
+# 🧭 Test & coverage reports
+.coverage
+htmlcov/
+.tox/
+.nox/
+coverage.xml
+.pytest_cache/
+junitxml/
+
+#  MyPy / Pyre / Pylint
+.mypy_cache/
+.pyre/
+.pytype/
+pylint-report.txt
+
+#  Node / Frontend (if any frontend bundled)
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+#  Docker & compose
+docker-compose.override.yml
+*.pid
+
+#  Backup files
+*.orig
+*.rej
